Fix minor typos

--- a/notebooks/1_introduction.ipynb
+++ b/notebooks/1_introduction.ipynb
@@ -18,10 +18,10 @@
     "This lab will focus on familiarizing us with the Jupyter notebook interface, a short introduction to programming in Python, and exploring the \"bias-variance\" tradeoff.\n",
     "\n",
     "## Exercise 1: Meet your group!\n",
-    "Everyone should have been assigned a random group for our lab sessions. Find the other 3–4 folks in your group and introduce yourself! This is an excellent time to help eachother and learn together. Over the next 5 minutes, go around and introduce yourself with the following info and anything else you want to share:\n",
+    "Everyone should have been assigned a random group for our lab sessions. Find the other 3–4 folks in your group and introduce yourself! This is an excellent time to help each other and learn together. Over the next 5 minutes, go around and introduce yourself with the following info and anything else you want to share:\n",
     "1. Your name (don't hesitate to gently correct mispronunciations!)\n",
     "2. Your preferred pronouns (he/him, she/her, them/they, ...)\n",
-    "3. Where your from, as specific as you want to be.\n",
+    "3. Where you are from, as specific as you want to be.\n",
     "4. Why are you interested in machine learning?\n",
     "\n",
     "Your group should be the first folks you look at to answer questions and discuss the excersises during the labs. However, if you do get stuck or have a remaining question, don't hesistate to ask for help! Use your post-it notes (we should have already talked about what the colors mean) to signal that your group needs help and one of the instructors will be over as soon as possible to assist.\n",
@@ -59,7 +59,7 @@
    "id": "cc36e355",
    "metadata": {},
    "source": [
-    "Throughout these labs, we will modify parts of existing code cells to see what happens. Below is a code cell that will create a plot which we can modify. Note that parts following `#`s are comments and have no affect on the code itself. Most of our Jupyter notebooks will begin with an series of `import` statements, which allow us to access load the functionality required for the session.\n",
+    "Throughout these labs, we will modify parts of existing code cells to see what happens. Below is a code cell that will create a plot which we can modify. Note that parts following `#`s are comments and have no affect on the code itself. Most of our Jupyter notebooks will begin with an series of `import` statements, which allow us to load the functionality required for the session.\n",
     "\n",
     "For this session, we only need the following import.\n",
     "\n",
@@ -108,7 +108,7 @@
    "id": "c9bc1998",
    "metadata": {},
    "source": [
-    "What the function do you think $f(X)$ describes? *The answer is at the bottom of this notebook.*\n",
+    "Which function do you think $f(X)$ describes? *The answer is at the bottom of this notebook.*\n",
     "\n",
     "### Running command line programs in Jupyter notebooks\n",
     "Finally, we can also execute command line programs from within a Jupyter notebook code cell. In later labs we'll explore command line programs like Percolator in detail. There are multiple ways to run command line programs in a Jupyter notebook. The easiest is to prefix your code with an exclamation point `!`.\n",
@@ -241,7 +241,7 @@
    "source": [
     "### Functions use inputs to produce outputs\n",
     "\n",
-    "Just like the functions we're trying to estimate using machine learning, functions in Python can take inputs and turn them into outputs. We typically call the inputs *arguments*. In some exercises you'll need to change the values of arguments to explore how a function behaves. One example example of a function we've used already is `print()` which prints the values of the variables you give it.\n",
+    "Just like the functions we're trying to estimate using machine learning, functions in Python can take inputs and turn them into outputs. We typically call the inputs *arguments*. In some exercises you'll need to change the values of arguments to explore how a function behaves. One example of a function we've used already is `print()` which prints the values of the variables you give it.\n",
     "\n",
     "We can also define our own custom function using the `def` keyword:"
    ]
@@ -318,7 +318,7 @@
    "id": "071717a5",
    "metadata": {},
    "source": [
-    "We're now going to revisit our peptide retention time data and use it to get a better understanding of the bias-variance trade-off. The code below fits a model with one hyperparameter `k` that controls it's flexibility to our peptide retention time dataset from [Zolg et al](https://doi.org/10.1002/pmic.201700263). As a group, explore what happens when you change `k` and discuss your observations. \n",
+    "We're now going to revisit our peptide retention time data and use it to get a better understanding of the bias-variance trade-off. The code below fits a model with one hyperparameter `k` that controls its flexibility to our peptide retention time dataset from [Zolg et al](https://doi.org/10.1002/pmic.201700263). As a group, explore what happens when you change `k` and discuss your observations. \n",
     "\n",
     "**Explore values of k between 1 and 10**\n",
     "- What changes do you see in the model fit (the line in the first two panels) when you change k?\n",
