--- a/notebooks/3_clustering.ipynb
+++ b/notebooks/3_clustering.ipynb
@@ -137,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kmeans = KMeans(n_clusters=5, random_state=0)"
+    "kmeans = KMeans(n_clusters=5, n_init=\"auto\", random_state=0)"
    ]
   },
   {
@@ -253,7 +253,7 @@
    "outputs": [],
    "source": [
     "cost = [\n",
-    "    KMeans(n_clusters=k, random_state=0).fit(X_reduced).inertia_\n",
+    "    KMeans(n_clusters=k, n_init=\"auto\", random_state=0).fit(X_reduced).inertia_\n",
     "    for k in range(2, 11)\n",
     "]\n",
     "\n",
@@ -285,9 +285,9 @@
    "outputs": [],
    "source": [
     "# Specify the number of clusters here:\n",
-    "n_clusters = # TODO\n",
+    "n_clusters = 3# TODO\n",
     "\n",
-    "kmeans = KMeans(n_clusters=n_clusters, random_state=0).fit(X_standardized)\n",
+    "kmeans = KMeans(n_clusters=n_clusters, n_init=\"auto\", random_state=0).fit(X_standardized)\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -438,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
