--- a/notebooks/4_model_evaluation.ipynb
+++ b/notebooks/4_model_evaluation.ipynb
@@ -15,13 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import scipy.stats as ss\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
-    "\n",
     "from sklearn.datasets import make_classification\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.feature_selection import f_classif\n",
@@ -57,7 +54,7 @@
     "X = pd.DataFrame(\n",
     "    np.random.normal(loc=5, scale=2, size=(n_samples, n_features)),\n",
     "    columns=[f\"feature_{i}\" for i in range(n_features)],\n",
-    "    index=[f\"run_{i}.mzML\" for i in range(n_samples)]\n",
+    "    index=[f\"run_{i}.mzML\" for i in range(n_samples)],\n",
     ")\n",
     "y = np.random.choice(2, n_samples)"
    ]
@@ -122,21 +119,20 @@
    "source": [
     "# Some utility functions.\n",
     "class FeatureSelector:\n",
-    "    \n",
     "    def __init__(self, pval_threshold):\n",
     "        self.pval_threshold = pval_threshold\n",
-    "    \n",
+    "\n",
     "    def fit(self, X, y):\n",
     "        _, pval = f_classif(X, y)\n",
     "        self.X_mask = np.where(pval < self.pval_threshold)[0]\n",
     "        return self\n",
-    "        \n",
+    "\n",
     "    def transform(self, X):\n",
     "        return X[:, self.X_mask]\n",
-    "    \n",
+    "\n",
     "    def fit_transform(self, X, y):\n",
     "        return self.fit(X, y).transform(X)\n",
-    "    \n",
+    "\n",
     "\n",
     "def plot_roc(tprs, aucs):\n",
     "    fig, ax = plt.subplots(figsize=(6, 6))\n",
@@ -192,7 +188,7 @@
     "for train, test in StratifiedKFold(n_splits=5).split(X_filtered, y):\n",
     "    classifier.fit(X_filtered[train], y[train])\n",
     "    y_pred = classifier.predict(X_filtered[test])\n",
-    "    \n",
+    "\n",
     "    fpr, tpr, _ = roc_curve(y[test], y_pred)\n",
     "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
     "    aucs.append(roc_auc_score(y[test], y_pred))"
@@ -268,11 +264,11 @@
     "for train, test in StratifiedKFold(n_splits=5).split(X, y):\n",
     "    classifier.fit(X.values[train], y[train])\n",
     "    y_pred = classifier.predict(X.values[test])\n",
-    "    \n",
+    "\n",
     "    fpr, tpr, _ = roc_curve(y[test], y_pred)\n",
     "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
     "    aucs.append(roc_auc_score(y[test], y_pred))\n",
-    "    \n",
+    "\n",
     "plot_roc(tprs, aucs)"
    ]
   },
@@ -329,11 +325,11 @@
     "for train, test in StratifiedKFold(n_splits=5).split(X_filtered, y):\n",
     "    classifier.fit(X_filtered[train], y[train])\n",
     "    y_pred = classifier.predict(X_filtered[test])\n",
-    "    \n",
+    "\n",
     "    fpr, tpr, _ = roc_curve(y[test], y_pred)\n",
     "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
     "    aucs.append(roc_auc_score(y[test], y_pred))\n",
-    "    \n",
+    "\n",
     "plot_roc(tprs, aucs)"
    ]
   },
@@ -365,11 +361,11 @@
     "for train, test in StratifiedKFold(n_splits=5).split(X, y):\n",
     "    classifier.fit(X[train], y[train])\n",
     "    y_pred = classifier.predict(X[test])\n",
-    "    \n",
+    "\n",
     "    fpr, tpr, _ = roc_curve(y[test], y_pred)\n",
     "    tprs.append(np.interp(mean_fpr, fpr, tpr))\n",
     "    aucs.append(roc_auc_score(y[test], y_pred))\n",
-    "    \n",
+    "\n",
     "plot_roc(tprs, aucs)"
    ]
   },
@@ -404,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
