--- a/notebooks/6_svms.ipynb
+++ b/notebooks/6_svms.ipynb
@@ -19,17 +19,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging                   # Control logging messages.\n",
-    "import mokapot                   # Our Python implementatation of the Percolator algorithm.\n",
+    "import logging  # Control logging messages.\n",
+    "\n",
     "import matplotlib.pyplot as plt  # For creating plots.\n",
-    "import seaborn as sns            # To make the plots a little prettier.\n",
-    "import numpy as np               # Just to set the random seed.\n",
+    "import mokapot  # Our Python implementatation of the Percolator algorithm.\n",
+    "import numpy as np  # Just to set the random seed.\n",
+    "import seaborn as sns  # To make the plots a little prettier.\n",
     "\n",
     "# So we can train a logistic regression model too.\n",
     "# LogisticRegressionCV let's us find the optimal hyperparameters by cross-validation.\n",
     "from sklearn.linear_model import LogisticRegressionCV\n",
-    "from sklearn.svm import SVC      # SVC let's us use kernels.\n",
-    "from sklearn.model_selection import GridSearchCV  # For choosing hyperparameters by cross-validation.\n",
+    "from sklearn.model_selection import (\n",
+    "    GridSearchCV,  # For choosing hyperparameters by cross-validation.\n",
+    ")\n",
+    "from sklearn.svm import SVC  # SVC let's us use kernels.\n",
     "\n",
     "# Show logging messages from mokapot:\n",
     "logging.basicConfig(level=logging.INFO, format=\"%(message)s\")\n",
@@ -260,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
