--- a/notebooks/7_random_forest.ipynb
+++ b/notebooks/7_random_forest.ipynb
@@ -24,7 +24,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
     "from sklearn.decomposition import PCA\n",
@@ -93,11 +92,17 @@
    "source": [
     "# Split into train and test set:\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X.values, y[\"label\"].map({\"A\": 0, \"H\": 1}).values, test_size=11, random_state=0,\n",
+    "    X.values,\n",
+    "    y[\"label\"].map({\"A\": 0, \"H\": 1}).values,\n",
+    "    test_size=11,\n",
+    "    random_state=0,\n",
     ")\n",
     "# Further split the train set into a train and validation set:\n",
     "X_train, X_val, y_train, y_val = train_test_split(\n",
-    "    X_train, y_train, test_size=11, random_state=0,\n",
+    "    X_train,\n",
+    "    y_train,\n",
+    "    test_size=11,\n",
+    "    random_state=0,\n",
     ")\n",
     "\n",
     "print(f\"Number of samples in the train set: {X_train.shape[0]}\")\n",
@@ -131,8 +136,8 @@
     "    VarianceThreshold(),\n",
     "    # Uncomment the following lines one by one:\n",
     "    # No feature selection: Don't uncomment anything.\n",
-    "#     SelectKBest(k=k),\n",
-    "#     PCA(n_components=k, random_state=0),\n",
+    "    #     SelectKBest(k=k),\n",
+    "    #     PCA(n_components=k, random_state=0),\n",
     "    RandomForestClassifier(random_state=0),\n",
     ")\n",
     "\n",
@@ -194,15 +199,15 @@
     "# Let's look at the ROC curve:\n",
     "fig, ax = plt.subplots()\n",
     "\n",
-    "ax.plot(fpr, tpr, label=f\"AUC (test) = {auc_test:.3f}\", marker=\"o\")        \n",
+    "ax.plot(fpr, tpr, label=f\"AUC (test) = {auc_test:.3f}\", marker=\"o\")\n",
     "ax.plot([0, 1], [0, 1], c=\"black\", ls=\"--\")\n",
     "ax.legend(loc=\"lower right\", frameon=False)\n",
     "\n",
     "ax.set_xlim(0, 1.05)\n",
     "ax.set_ylim(0, 1.05)\n",
     "\n",
-    "ax.set_xlabel('False Positive Rate')\n",
-    "ax.set_ylabel('True Positive Rate')\n",
+    "ax.set_xlabel(\"False Positive Rate\")\n",
+    "ax.set_ylabel(\"True Positive Rate\")\n",
     "\n",
     "sns.despine(ax=ax)\n",
     "\n",
@@ -247,7 +252,7 @@
     "# Match features to feature importances:\n",
     "feature_importances = pd.Series(\n",
     "    model[\"randomforestclassifier\"].feature_importances_,\n",
-    "    index=selected_features\n",
+    "    index=selected_features,\n",
     ")\n",
     "# Sort by descending feature importance:\n",
     "feature_importances = feature_importances.sort_values(ascending=False)\n",
@@ -258,8 +263,8 @@
     "\n",
     "ax.set_ylim(0, ax.get_ylim()[1])\n",
     "\n",
-    "ax.set_xlabel('Protein')\n",
-    "ax.set_ylabel('Feature importance')\n",
+    "ax.set_xlabel(\"Protein\")\n",
+    "ax.set_ylabel(\"Feature importance\")\n",
     "\n",
     "sns.despine()\n",
     "\n",
@@ -284,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
