--- a/notebooks/3_clustering.ipynb
+++ b/notebooks/3_clustering.ipynb
@@ -23,8 +23,8 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "from scipy.cluster.hierarchy import dendrogram\n",
-    "from sklearn.datasets import load_wine\n",
     "from sklearn.cluster import AgglomerativeClustering, KMeans\n",
+    "from sklearn.datasets import load_wine\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
@@ -75,7 +75,7 @@
     "for col, ax in zip(X.columns, axes.ravel()):\n",
     "    sns.histplot(data=X, x=col, ax=ax)\n",
     "    sns.despine(ax=ax)\n",
-    "    \n",
+    "\n",
     "plt.tight_layout()\n",
     "\n",
     "plt.show()\n",
@@ -285,9 +285,11 @@
    "outputs": [],
    "source": [
     "# Specify the number of clusters here:\n",
-    "n_clusters = 3# TODO\n",
+    "n_clusters = 3  # TODO\n",
     "\n",
-    "kmeans = KMeans(n_clusters=n_clusters, n_init=\"auto\", random_state=0).fit(X_standardized)\n",
+    "kmeans = KMeans(n_clusters=n_clusters, n_init=\"auto\", random_state=0).fit(\n",
+    "    X_standardized\n",
+    ")\n",
     "\n",
     "fig, ax = plt.subplots()\n",
     "\n",
@@ -438,7 +440,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
