--- a/notebooks/5_logistic-regression.ipynb
+++ b/notebooks/5_logistic-regression.ipynb
@@ -19,21 +19,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd                # For working with tabular data.\n",
-    "import matplotlib.pyplot as plt    # For plotting data\n",
-    "import seaborn as sns              # For theming our plots.\n",
+    "import matplotlib.pyplot as plt  # For plotting data\n",
+    "import pandas as pd  # For working with tabular data.\n",
+    "import seaborn as sns  # For theming our plots.\n",
     "from sklearn.linear_model import (\n",
-    "    LogisticRegression,            # To use logistic regression.\n",
-    "    LogisticRegressionCV,          # Automatically select hyperparameters using cross-validation\n",
-    ") \n",
-    "from sklearn.preprocessing import StandardScaler # Used to normalize the features\n",
+    "    LogisticRegressionCV,  # Automatically select hyperparameters using cross-validation\n",
+    ")\n",
     "\n",
     "# These will calculate our ROC and precision-recall curve metrics.\n",
     "from sklearn.metrics import (\n",
-    "    roc_auc_score,\n",
-    "    RocCurveDisplay,\n",
-    "    average_precision_score,\n",
     "    PrecisionRecallDisplay,\n",
+    "    RocCurveDisplay,\n",
+    ")\n",
+    "from sklearn.preprocessing import (\n",
+    "    StandardScaler,  # Used to normalize the features\n",
     ")\n",
     "\n",
     "# Make our plots look nice:\n",
@@ -41,8 +40,8 @@
     "\n",
     "# These variables define the paths to our data:\n",
     "metadata_csv = \"../data/quality/metadata.csv\"  # A summary of the data\n",
-    "train_csv = \"../data/quality/training.csv\"     # The training set\n",
-    "test_csv = \"../data/quality/test.csv\"          # The test set\n"
+    "train_csv = \"../data/quality/training.csv\"  # The training set\n",
+    "test_csv = \"../data/quality/test.csv\"  # The test set"
    ]
   },
   {
@@ -84,7 +83,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_df = pd.read_csv(train_csv) # Read the training data.\n",
+    "train_df = pd.read_csv(train_csv)  # Read the training data.\n",
     "train_df"
    ]
   },
@@ -132,7 +131,9 @@
     "\n",
     "# Find the feature columns in the data:\n",
     "# This is a Python feature called a \"list comprehension\"\n",
-    "feature_columns = [c for c in train_velos.columns if c not in not_feature_columns]\n",
+    "feature_columns = [\n",
+    "    c for c in train_velos.columns if c not in not_feature_columns\n",
+    "]\n",
     "\n",
     "# Extract the features and labels:\n",
     "X_train = train_velos.loc[:, feature_columns]\n",
@@ -188,11 +189,11 @@
    "source": [
     "# Create the model:\n",
     "model = LogisticRegressionCV(\n",
-    "    penalty=\"l1\",       # Use L1 regularization\n",
-    "    cv=3,               # Use 3 cross-validation folds.\n",
+    "    penalty=\"l1\",  # Use L1 regularization\n",
+    "    cv=3,  # Use 3 cross-validation folds.\n",
     "    scoring=\"roc_auc\",  # Use ROC AUC to choose which model is best.\n",
-    "    solver=\"saga\",      # Needed to use L1 regularization.\n",
-    "    max_iter=5000,      # Needed for the models to finish training.\n",
+    "    solver=\"saga\",  # Needed to use L1 regularization.\n",
+    "    max_iter=5000,  # Needed for the models to finish training.\n",
     ")\n",
     "\n",
     "# Fit the model:\n",
@@ -216,7 +217,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = pd.read_csv(test_csv) # Read the test data.\n",
+    "test_df = pd.read_csv(test_csv)  # Read the test data.\n",
     "\n",
     "# Filter for only Velos Orbitrap data:\n",
     "test_velos = train_df.loc[train_df[\"Instrument_Category\"] == \"VOrbitrap\", :]\n",
@@ -283,7 +284,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
