--- a/notebooks/5_logistic-regression.ipynb
+++ b/notebooks/5_logistic-regression.ipynb
@@ -220,7 +220,9 @@
     "test_df = pd.read_csv(test_csv)  # Read the test data.\n",
     "\n",
     "# Filter for only Velos Orbitrap data:\n",
-    "test_velos = train_df.loc[train_df[\"Instrument_Category\"] == \"VOrbitrap\", :]\n",
+    "test_velos = test_df.loc[test_df[\"Instrument_Category\"] == \"VOrbitrap\", :]\n",
+    "test_velos = test_velos.loc[test_velos[\"Curated_Quality\"] != \"Not curated\", :]\n",
+    "test_velos[\"BinomResp\"] = (test_velos[\"Curated_Quality\"] == \"poor\").astype(int)\n",
     "\n",
     "# Extract the features and labels:\n",
     "X_test = test_velos.loc[:, feature_columns]\n",
