Update neural networks exercise and bump pre-commit hooks

--- a/notebooks/8_neural_networks.ipynb
+++ b/notebooks/8_neural_networks.ipynb
@@ -6,12 +6,23 @@
     "id": "_FOvWLgEcSRi"
    },
    "source": [
-    "# Predicting Peptide Collisional Crossection from timsTOF data\n",
+    "# Predicting a biophysical property of peptides\n",
     "\n",
-    "In this lab, we will build a Transformer model to predict the measured collisional cross section (CCS) of a peptide from its sequence and charge state, using subsets of the original training and test data from [Meier et al](https://www.nature.com/articles/s41467-021-21352-8).\n",
+    "The collisional cross section is a biophysical property of a molecule and a crude measurement of its three-dimensional structure.\n",
+    "The CSS of a molecule describes the physical surface area of the molecule that will induce drag as it travels in an electric field due to collisions with neutral molecules along the way.\n",
+    "In this excercise, we'll be building a Transformer model to predict the CSS of peptides.\n",
+    "\n",
+    "Why do we care about predicting CCS of peptides?\n",
+    "- CCS helps us detect peptides more confidently in proteomics experiments.\n",
+    "- CCS is used in quality assurance and control for therapeutic peptides to ensure the correct peptide species was made.\n",
+    "- CCS can resolve peptide isomers that are difficult to resolve by other methods.\n",
+    "- CCS provides insights for therapeutic macrocyclic peptide development. \n",
+    "\n",
+    "\n",
+    "In this excercise, we will build a Transformer model to predict the measured collisional cross section (CCS) of a peptide from its sequence and charge state, using subsets of the original training and test data from [Meier et al](https://www.nature.com/articles/s41467-021-21352-8).\n",
     "To accomplish this task, we'll create a Transformer encoder for peptide sequences and charge states, and add a feed forward neural network to predict the CCS of each peptide.\n",
     "\n",
-    "This lab makes use of Depthcharge, a Python package that Wout and Will have written to model mass spectrometry data with neural networks. Depthcharge provides nice building blocks for us to use within the PyTorch deep learning framework to build these models.\n",
+    "This excercise makes use of Depthcharge, a Python package that Will wrote to model mass spectrometry data with neural networks. Depthcharge provides nice building blocks for us to use within the PyTorch deep learning framework to build these models.\n",
     "\n",
     "**Before proceeding with this notebook, make sure to switch a GPU runtime on Google Colab.** To do this, click `Runtime` -> `Change runtime type`, and select `GPU` under `Hardware accelerator`. If you have a box called `GPU type` we recommend selecting the `T4` GPU to run this notebook previously.\n",
     "\n",
@@ -32,7 +43,7 @@
    "source": [
     "%%capture\n",
     "%%bash\n",
-    "pip install lightning tensorboard git+https://github.com/wfondrie/depthcharge.git\n",
+    "pip install lightning tensorboard depthcharge-ms\n",
     "wget -nc https://github.com/theislab/DeepCollisionalCrossSection/raw/master/data/combined_sm.csv.tar.gz\n",
     "tar -xzvf combined_sm.csv.tar.gz"
    ]
@@ -52,7 +63,6 @@
     "- `FeedForward` - This is a utility PyTorch Module for quickly creating feed forward neural networks.\n",
     "- `PeptideTokenizer` - This class defines the amino acid alphabet, including modifications, that are valid tokens for our model.\n",
     "  It also tells Depthcharge how to convert a peptide sequence into tokens and back.\n",
-    "  First-class support for ProForma formatted peptide sequences is included out-of-the-box.\n",
     "- `PeptideTransformerEncoder` - This is a PyTorch Module that embeds the peptide and its residues using a Transformer architecture.\n",
     "\n",
     "After importing these libraries, the following code also sets a plotting theme and a random seed for reproducibility."
@@ -97,8 +107,8 @@
    },
    "source": [
     "## Parse the data\n",
-    "With our library loaded, we can now parse the CSV file from Meier et al, and sample only 10% of the peptides from the dataset for our lab.\n",
-    "The peptide sequences are provided in a MaxQuant format, which we convert to be ProForma compliant.\n",
+    "With our library loaded, we can now parse the CSV file from Meier et al, and sample only 10% of the peptides from the dataset for our excercise.\n",
+    "The peptide sequences are provided in a non-standard format, so we'll do a small bit of data-wrangling to put it in the standard format for peptide sequences, ProForma.\n",
     "\n",
     "We then try and split the data in to training, validation, and test splits, matching the test data to that described in the paper;\n",
     "The paper states that the ProteomeTools subset was used as a test set, which are denoted by using the `PT` column."
@@ -123,7 +133,9 @@
     "    pd.read_csv(\"combined_sm.csv\", index_col=0)  # Read the data\n",
     "    .sample(frac=0.1)  # Use only 10% of the data\n",
     "    .reset_index()  # Renumber rows\n",
-    "    .rename(columns={\"Modified sequence\": \"Seq\"})  # Make the column shorter\n",
+    "    .rename(\n",
+    "        columns={\"Modified sequence\": \"Seq\"}\n",
+    "    )  # Make the column name shorter\n",
     ")\n",
     "\n",
     "# Convert sequences to be ProForma-compliant.\n",
@@ -134,7 +146,7 @@
     "    .str.replace(\"_\", \"\", regex=False)\n",
     ")\n",
     "\n",
-    "# Verify we've accounted for all modifica†ions:\n",
+    "# Verify we've accounted for all modified amino acids:\n",
     "assert not data[\"Seq\"].str.contains(\"(\", regex=False).sum()\n",
     "\n",
     "# Split the data\n",
@@ -191,7 +203,56 @@
     "id": "GdDWRaWbcSRn"
    },
    "source": [
-    "It looks like our tokenizer has captured all of the residues we expect."
+    "It looks like our tokenizer has captured all of the residues we expect.\n",
+    "\n",
+    "Take a moment and play with to tokenizer starting with the code below. Discuss the following questions:\n",
+    "- What is the `PeptideTokenizer` doing for you?\n",
+    "- What are in the output tensors?\n",
+    "- Are the output tensors in the shape that you expect? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.tokenize(\"LESLIEK\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tokenizer.tokenize([\"LESLIEK\", \"EDITHR\"])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## A quick example of featurization\n",
+    "\n",
+    "In PyTorch, we use `torch.nn.Embedding` layers to build a lookup table for our tokens. \n",
+    "Generally the `Embedding` layer is included within a model as part of the parameters that we train.\n",
+    "\n",
+    "Consider the following questions after looking at the code below:\n",
+    "- What are the shapes of the output?\n",
+    "- What does each dimension mean?\n",
+    "- Is the shape what you expected?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "featurizer = torch.nn.Embedding(len(tokenizer), 12)\n",
+    "tokens = tokenizer.tokenize([\"LESLIEK\", \"EDITHR\"])\n",
+    "featurizer(tokens)"
    ]
   },
   {
@@ -201,7 +262,7 @@
    },
    "source": [
     "## Preparing Datasets\n",
-    "When modeling data using PyTorch, we typically need to pur our data into a PyTorch `Dataset` and serve it to your model using a PyTorch `DataLoader`.\n",
+    "When modeling data using PyTorch, we typically need to put our data into a PyTorch `Dataset` and serve it to your model using a PyTorch `DataLoader`.\n",
     "Here, we use Depthcharge's `AnalyteDataset` class, which handles transforming the peptide strings for modeling.\n",
     "Because this dataset is small from a memory perspective, we go ahead and load it onto the GPU as well, to increase our training speed.\n",
     "\n",
@@ -291,9 +352,9 @@
     "id": "LQzUUxE0cSRo"
    },
    "source": [
-    "## Create a model\n",
+    "## Create a Transformer model\n",
     "\n",
-    "Time to create a deep learning model using PyTorch Lightning and Depthcharge!\n",
+    "Time to create a Transformer model using PyTorch Lightning and Depthcharge!\n",
     "Our model consists of a `PeptideTransformerEncoder` module to embed peptides and a `FeedForward` module to predict CCS from the latent representation.\n",
     "With PyTorch Lightning, we need to specify the modules that comprise our model, define the optimizer(s) we will use to train it, and tell Lightning how to run the model when training, validating, and predicting.\n",
     "\n",
@@ -314,13 +375,14 @@
     "class CCSPredictor(AnalyteTransformerEncoder, pl.LightningModule):\n",
     "    \"\"\"A Transformer model for CCS prediction.\"\"\"\n",
     "\n",
-    "    def __init__(self, tokenizer, d_model, n_layers):\n",
+    "    def __init__(self, tokenizer, d_model, n_layers, lr):\n",
     "        \"\"\"Initialize the CCSPredictor.\"\"\"\n",
     "        super().__init__(\n",
     "            n_tokens=tokenizer,\n",
     "            d_model=d_model,\n",
     "            n_layers=n_layers,\n",
     "        )\n",
+    "        self.lr = lr\n",
     "        self.mass_encoder = FloatEncoder(d_model)\n",
     "        self.charge_encoder = FloatEncoder(d_model, 1, 10)\n",
     "        self.ccs_head = FeedForward(d_model, 1, 3)\n",
@@ -376,7 +438,7 @@
     "\n",
     "    def configure_optimizers(self):\n",
     "        \"\"\"Configure the optimizer for training.\"\"\"\n",
-    "        optimizer = torch.optim.Adam(self.parameters(), lr=1e-5)\n",
+    "        optimizer = torch.optim.Adam(self.parameters(), lr=self.lr)\n",
     "        return optimizer"
    ]
   },
@@ -409,8 +471,8 @@
    "outputs": [],
    "source": [
     "# Create a model.\n",
-    "# If you have time, try changing d_model and n_layers.\n",
-    "model = CCSPredictor(tokenizer, d_model=32, n_layers=4)\n",
+    "# Rry changing d_model, n_layers and lr.\n",
+    "model = CCSPredictor(tokenizer, d_model=32, n_layers=4, lr=1e-5)\n",
     "\n",
     "\n",
     "# Create a way to log our losses.\n",
@@ -423,7 +485,8 @@
     "\n",
     "    def on_train_epoch_end(self, trainer, pl_module):\n",
     "        \"\"\"Add the loss to the history.\"\"\"\n",
-    "        self.history.append(dict(trainer.callback_metrics))\n",
+    "        metrics = dict(trainer.callback_metrics)\n",
+    "        self.history.append({k: v.cpu().item() for k, v in metrics.items()})\n",
     "\n",
     "\n",
     "# Create our logger:\n",
@@ -431,7 +494,21 @@
     "\n",
     "# Create the model trainer.\n",
     "# If you have time, try changing max_epochs\n",
-    "trainer = pl.Trainer(callbacks=[logger], max_epochs=30)"
+    "trainer = pl.Trainer(callbacks=[logger], max_epochs=40)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are several parameters that we can play with here after training your first model. Try changing:\n",
+    "- `d_model` - the embedding dimensionality in the Transformer\n",
+    "- `n_layer` - the number of Transformer encoder layers\n",
+    "- `lr` - The learning rate\n",
+    "\n",
+    "What happens when you change these?\n",
+    "\n",
+    "Can you build a better model than the default?"
    ]
   },
   {
@@ -825,7 +902,7 @@
     "id": "W2xdPLpduTwb"
    },
    "source": [
-    "Congratulations! You just trained a deep learning model.\n",
+    "Congratulations! You just trained a Transformer model.\n",
     "\n",
     "Let's take a look at the loss curves from training now:"
    ]
@@ -923,7 +1000,13 @@
    "source": [
     "This looks pretty good to me.\n",
     "If we want to perform further tweaks and optimizations, we should turn back and do them now.\n",
-    "If not, we're ready to get our predictions for the test set, after which we should cease trying to optimize our model."
+    "If not, we're ready to get our predictions for the test set, after which we should cease trying to optimize our model.\n",
+    "\n",
+    "You should explore changing the size of the model (`d_model` and `n_layers`) above. Can you make it overfit?\n",
+    "\n",
+    "You should also experiment with the number of epochs that you train for and adjust the learning rate.\n",
+    "\n",
+    "What other information should you have in this evaluation?"
    ]
   },
   {
@@ -994,7 +1077,7 @@
     "id": "9lcwS5iocSRr"
    },
    "source": [
-    "Nice! This looks great."
+    "Nice! This looks great and very similar to the results found in the paper."
    ]
   }
  ],
@@ -1019,7 +1102,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.12.8"
   },
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
@@ -12655,5 +12738,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 4
 }
